добавление папки классов
добавлена папка цсс

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+    <link rel="stylesheet" href="./CSS/nain.css">
+      </head>
   <body>
     <!--golova-->
     <header>
       <nav>
-        <a href=""><span>Web</span>Studio</a>
+        <a class="company_name" href=""><span class="Web_color">Web</span>Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
