--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!--golova-->
     <header>
       <nav>
-        <a class="company_name" href=""><span class="Web_color">Web</span>Studio</a>
-        <ul>
+        <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
+        <ul class="ul">
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul>
+        <ul class="ul">
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href=":tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -36,7 +36,7 @@
       <section>
         <h2>преимущества</h2>
         <!--скрыть заголовок-->
-        <ul>
+        <ul class="ul">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -70,7 +70,7 @@
       <!--чем занимаются-->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="ul">
           <li>
             <a href=""
               ><img
@@ -103,7 +103,7 @@
       <!-- работники-->
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="ul">
           <li>
             <img
               src="img/img-3.jpg"
@@ -150,7 +150,7 @@
     <footer>
       <a href=""><span>Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="ul">
           <li>
             <a href="г. Киев, пр-т Леси Украинки, 26"
               >г. Киев, пр-т Леси Украинки, 26</a
