--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/nain.css">
       </head>
-  <body>
+  <body class="body">
     <!--golova-->
-    <header>
+    <header class="" >
       <nav>
         <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
-        <ul class="ul">
+        <ul class="site_nav">
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul class="ul">
+        <ul >
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href=":tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -25,7 +25,7 @@
     </header>
     <main>
       <!--секция с фоновым рисунком-->
-      <section>
+      <section class="name">
         <h1>
           Эфективные решения <br />
           для вашего бизнеса
@@ -70,7 +70,7 @@
       <!--чем занимаются-->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul class="ul">
+        <ul >
           <li>
             <a href=""
               ><img
@@ -103,7 +103,7 @@
       <!-- работники-->
       <section>
         <h2>Наша команда</h2>
-        <ul class="ul">
+        <ul >
           <li>
             <img
               src="img/img-3.jpg"
@@ -147,10 +147,10 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href=""><span>Web</span>Studio</a>
+    <footer class="name">
+      <a href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
       <address>
-        <ul class="ul">
+        <ul>
           <li>
             <a href="г. Киев, пр-т Леси Украинки, 26"
               >г. Киев, пр-т Леси Украинки, 26</a
