--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul class="">
+        <ul class="contakts">
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href=":tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
