--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <main>
       <!--секция с фоновым рисунком-->
       <section class="name">
-        <h1>
+        <h1 class="name_title">
           Эфективные решения <br />
           для вашего бизнеса
         </h1>
         <button type="button">Заказать услугу</button>
       </section>
       <!--преимущиства-->
-      <section>
-        <h2>преимущества</h2>
+      <section class="benefits">
+        <h2 class="benefits_title">преимущества</h2>
         <!--скрыть заголовок-->
-        <ul class="ul">
+        <ul>
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -68,8 +68,8 @@
         </ul>
       </section>
       <!--чем занимаются-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="orientation">
+        <h2 class="orientation_title">Чем мы занимаемся</h2>
         <ul >
           <li>
             <a href=""
