--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <button type="button">Заказать услугу</button>
       </section>
       <!--преимущиства-->
-      <section class="benefits">
-        <h2 class="benefits_title">преимущества</h2>
+      <section class="section">
+        <h2 class="section_title">преимущества</h2>
         <!--скрыть заголовок-->
         <ul>
           <li>
@@ -68,8 +68,8 @@
         </ul>
       </section>
       <!--чем занимаются-->
-      <section class="orientation">
-        <h2 class="orientation_title">Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section_title">Чем мы занимаемся</h2>
         <ul >
           <li>
             <a href=""
@@ -101,8 +101,8 @@
         </ul>
       </section>
       <!-- работники-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section" >
+        <h2 class="xectoin_title">Наша команда</h2>
         <ul >
           <li>
             <img
@@ -111,7 +111,7 @@
               width="270"
               height="368"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="section_title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -121,7 +121,7 @@
               width="270"
               height="368"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="section_title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               width="270"
               height="368"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="section_title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
