--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
         <ul class="Benefits-list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="benefits-clarification">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="benefits-clarification">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="benefits-clarification">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="benefits-clarification">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
