--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Эфективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
       <!--преимущиства-->
       <section class="section">
