--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
         <ul class="navig_sait">
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./портфолиа.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
         <ul class="contakts">
