--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       </head>
   <body class="body">
     <!--golova-->
-    <header class="" >
+    <header class="header" >
       <nav>
         <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
         <ul class="navig_sait">
@@ -101,7 +101,7 @@
         </ul>
       </section>
       <!-- работники-->
-      <section class="section" >
+      <section class="section-comand" >
         <h2 class="xectoin_title">Наша команда</h2>
         <ul >
           <li>
