--- a/портфолиа.html
+++ b/портфолиа.html
@@ -24,6 +24,18 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <!--навигация -->
+       <section >
+         <ul >
+           <li class="port-nav"> <button>Все</button></li>  
+           <li class="port-nav"> <button>Веб-сайт</button></li>
+           <li class="port-nav"> <button>Приложения</button></li>
+           <li class="port-nav"> <button>Дизайн</button></li>
+           <li class="port-nav"> <button>маркетинг</button></li>
+         </ul>           
+       </section> 
+      </main>
     
 </body>
 </html>
