--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
       <a href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
       <address>
         <ul>
-          <li>
-            <a href="г. Киев, пр-т Леси Украинки, 26"
+          <li >
+            <a class="adress" href="г. Киев, пр-т Леси Украинки, 26"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="info@example.com">info@example.com</a></li>
-          <li><a href=":tel:+380961111111">:+38 099 111 11 11</a></li>
+          <li class="contakts"><a href="info@example.com">info@example.com</a></li>
+          <li class="contakts"><a href=":tel:+380961111111">:+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
