--- a/портфолиа.html
+++ b/портфолиа.html
@@ -35,7 +35,53 @@
            <li class="port-nav"> <button>маркетинг</button></li>
          </ul>           
        </section> 
+       <!--секция с картинками-->
+       <section class="imagi-partfolio">
+         <ul>
+           <li> <a href=""> <img src="./portfolio-img/img (3).jpg" alt=" откроытый ноутбук с открытой страничкой"></a> 
+          <h3>Технокряк</h3>
+        <p>Веб-сайт</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (4).jpg" alt=" два баскетболиста с мячем"></a> 
+          <h3>Постер New Orlean vs Golden Star</h3>
+        <p>Дизайн</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (5).jpg" alt="рыба с надписями"></a> 
+          <h3>Ресторан Seafood</h3>
+        <p>Приложение</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (6).jpg" alt="наушники"></a> 
+          <h3>Проект Prime</h3>
+        <p>Маркетинг</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (7).jpg" alt="две коробочки"></a> 
+          <h3>Проект Boxes</h3>
+        <p>Приложение</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (8).jpg" alt="включенный манитор"></a> 
+          <h3>Inspiration has no Borders</h3>
+        <p>Веб-сайт</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (9).jpg" alt="открытая книжка"></a> 
+          <h3>Издание Limited Edition</h3>
+        <p>Дизайн</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (10).jpg" alt="бирка с надписью"></a> 
+          <h3>Проект LAB</h3>
+        <p>Маркетинг</p></li>
+           <li> <a href=""> <img src="./portfolio-img/img (11).jpg" alt="на открытом ноутбуке набирают текст"></a> 
+          <h3>Growing Business</h3>
+        <p>Приложение</p></li>
+         </ul>
+       </section>
       </main>
+      <footer class="name">
+        <a href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
+        <address>
+          <ul>
+            <li class="adress">
+              <a class="adress" href="г. Киев, пр-т Леси Украинки, 26"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contakts"><a href="info@example.com">info@example.com</a></li>
+            <li class="contakts"><a href=":tel:+380961111111">:+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </footer>
     
 </body>
 </html>
