--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
       <address>
         <ul>
           <li >
-            <a class="adress" href="г. Киев, пр-т Леси Украинки, 26"
-              >г. Киев, пр-т Леси Украинки, 26</a
+            <a class="adress" href="г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li class="contakts"><a href="info@example.com">info@example.com</a></li>
