--- a/портфолиа.html
+++ b/портфолиа.html
@@ -34,37 +34,35 @@
            <li class="port-nav"> <button type="button">Дизайн</button></li>
            <li class="port-nav"> <button type="button">маркетинг</button></li>
          </ul>           
-       </section> 
-       <!--секция с картинками-->
-       <section class="imagi-partfolio">
-         <ul>
-           <li> <a href=""> <img src="./portfolio-img/img(3).jpg" alt=" откроытый ноутбук с открытой страничкой"></a> 
+              <!--секция с картинками-->
+               <ul  class="imagi-partfolio">
+           <li> <a href=""> <img src="./portfolio-img/img(3).jpg" alt=" откроытый ноутбук с открытой страничкой"> 
           <h3>Технокряк</h3>
-        <p>Веб-сайт</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(4).jpg" alt=" два баскетболиста с мячем"></a> 
+        <p>Веб-сайт</p></a></li>
+           <li> <a href=""> <img src="./portfolio-img/img(4).jpg" alt=" два баскетболиста с мячем"> 
           <h3>Постер New Orlean vs Golden Star</h3>
-        <p>Дизайн</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(5).jpg" alt="рыба с надписями"></a> 
+        <p>Дизайн</p></a></li>
+           <li> <a href=""> <img src="./portfolio-img/img(5).jpg" alt="рыба с надписями">
           <h3>Ресторан Seafood</h3>
-        <p>Приложение</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(6).jpg" alt="наушники"></a> 
+        <p>Приложение</p></a> </li>
+           <li> <a href=""> <img src="./portfolio-img/img(6).jpg" alt="наушники">
           <h3>Проект Prime</h3>
-        <p>Маркетинг</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(7).jpg" alt="две коробочки"></a> 
+        <p>Маркетинг</p></a> </li>
+           <li> <a href=""> <img src="./portfolio-img/img(7).jpg" alt="две коробочки">
           <h3>Проект Boxes</h3>
-        <p>Приложение</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(8).jpg" alt="включенный манитор"></a> 
+        <p>Приложение</p></a> </li>
+           <li> <a href=""> <img src="./portfolio-img/img(8).jpg" alt="включенный манитор"> 
           <h3>Inspiration has no Borders</h3>
-        <p>Веб-сайт</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(9).jpg" alt="открытая книжка"></a> 
+        <p>Веб-сайт</p></a></li>
+           <li> <a href=""> <img src="./portfolio-img/img(9).jpg" alt="открытая книжка">
           <h3>Издание Limited Edition</h3>
-        <p>Дизайн</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(10).jpg" alt="бирка с надписью"></a> 
+        <p>Дизайн</p></a></li>
+           <li> <a href=""> <img src="./portfolio-img/img(10).jpg" alt="бирка с надписью"> 
           <h3>Проект LAB</h3>
-        <p>Маркетинг</p></li>
-           <li> <a href=""> <img src="./portfolio-img/img(11).jpg" alt="на открытом ноутбуке набирают текст"></a> 
+        <p>Маркетинг</p></a></li>
+           <li> <a href=""> <img src="./portfolio-img/img(11).jpg" alt="на открытом ноутбуке набирают текст"> 
           <h3>Growing Business</h3>
-        <p>Приложение</p></li>
+        <p>Приложение</p></a></li>
          </ul>
        </section>
       </main>
