--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--golova-->
     <header class="header" >
       <nav>
-        <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
+        <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
         <ul class="navig_sait">
           <li><a href="">Студия</a></li>
           <li><a href="./портфолиа.html">Портфолио</a></li>
@@ -151,7 +151,7 @@
       </section>
     </main>
     <footer class="name">
-      <a href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
+      <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
       <address>
         <ul>
           <li >
