--- a/портфолиа.html
+++ b/портфолиа.html
@@ -10,12 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/nain.css">
 </head>
-<body>
+<body class="body">
     <h1>партфолио</h1>
     <!--golova-->
     <header class="" >
         <nav>
-          <a href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
+          <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
           <ul class="navig_sait">
             <li><a href="">Студия</a></li>
             <li><a href="./портфолиа.html">Портфолио</a></li>
