--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/nain.css">
 </head>
        <body class="body">
@@ -17,9 +20,9 @@
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul class="contakts">
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href=":tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contakts" >
+          <li ><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li ><a href=":tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </nav>
     </header>
