--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
       <!--чем занимаются-->
       <section class="section">
-        <h2 class="section_title">Чем мы занимаемся</h2>
+        <h2 class="">Чем мы занимаемся</h2>
         <ul >
           <li>
             <a href=""
@@ -114,7 +114,7 @@
               width="270"
               height="368"
             />
-            <h3 class="section_title">Игорь Демьяненко</h3>
+            <h3 class="">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -124,7 +124,7 @@
               width="270"
               height="368"
             />
-            <h3 class="section_title">Ольга Репина</h3>
+            <h3 >Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -134,7 +134,7 @@
               width="270"
               height="368"
             />
-            <h3 class="section_title">Николай Тарасов</h3>
+            <h3 >Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -150,7 +150,7 @@
         </ul>
       </section>
     </main>
-    <footer class="name">
+    <footer class="footer">
       <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
       <address>
         <ul>
