--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
       <!--преимущиства-->
       <section class="section">
-        <h2 class="section_title">преимущества</h2>
+        <h2 >преимущества</h2>
         <!--скрыть заголовок-->
         <ul class="Benefits-list">
           <li>
@@ -72,7 +72,7 @@
       </section>
       <!--чем занимаются-->
       <section class="section">
-        <h2 class="">Чем мы занимаемся</h2>
+        <h2 class="what-we-do">Чем мы занимаемся</h2>
         <ul >
           <li>
             <a href=""
@@ -114,7 +114,7 @@
               width="270"
               height="368"
             />
-            <h3 class="">Игорь Демьяненко</h3>
+            <h3 >Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
