первая страница стили
Доделана первая страница стили

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
+      <a class="logo-fot" href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
       <address>
         <ul>
           <li >
