--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <main>
       <!--навигация -->
       <section>
-        <ul>
+        <ul class="">
           <li class="port-nav"><button type="button">Все</button></li>
           <li class="port-nav"><button type="button">Веб-сайт</button></li>
           <li class="port-nav"><button type="button">Приложения</button></li>
@@ -127,7 +127,7 @@
       >
       <address>
         <ul>
-          <li class="adress">
+          <li class="">
             <a class="adress-footer" href="г.-Киев,-пр-т-Леси-Украинки,-26"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
