--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/nain.css">
 </head>
        <body class="body">
     <!--golova-->
     <header class="header" >
       <nav>
-        <a class="logo" href=""><span class="Web_color">Web</span><span class="Web_color2" >Studio</span></a>
+        <a class="logo" href="index.html"><span class="web_color">Web</span><span class="web-color-a">Studio</span></a>
         <ul class="navig_sait">
           <li><a href="">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
@@ -151,7 +154,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-fot" href=""><span class="Web_color">Web</span><span class="Web_color3" >Studio</span></a>
+      <a class="logo-fot" href=""><span class="web_color">Web</span><span class="web_color-b">Studio</span></a>
       <address>
         <ul>
           <li >
