--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/nain.css" />
   </head>
   <body class="body">
@@ -18,9 +21,9 @@
     <!--golova-->
     <header class="">
       <nav>
-        <a class="logo" href=""
-          ><span class="Web_color">Web</span
-          ><span class="Web_color2">Studio</span></a
+        <a class="logo" href="./index.html"
+          ><span class="web_color">Web</span
+          ><span class="web_color-a">Studio</span></a
         >
         <ul class="navig_sait">
           <li><a href="">Студия</a></li>
@@ -122,8 +125,8 @@
     </main>
     <footer class="footer" >
       <a class="logo-foot" href=""
-        ><span class="Web_color">Web</span
-        ><span class="Web_color3">Studio</span></a
+        ><span class="web_color">Web</span
+        ><span class="web_color3">Studio</span></a
       >
       <address>
         <ul>
