--- a/portfolio.html
+++ b/portfolio.html
@@ -124,22 +124,22 @@
       </section>
     </main>
     <footer class="footer" >
-      <a class="logo-foot" href=""
+      <a class="logo-foot" href="./index.html"
         ><span class="web_color">Web</span
-        ><span class="web_color3">Studio</span></a
+        ><span class="web_color-b">Studio</span></a
       >
       <address>
-        <ul>
+        <ul class="adress-footer">
           <li class="">
-            <a class="adress-footer" href="г.-Киев,-пр-т-Леси-Украинки,-26"
+            <a class="adress-footera" href="г.-Киев,-пр-т-Леси-Украинки,-26"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a  class="contakts-footer" href="info@example.com">info@example.com</a>
+            <a class="mail" href="info@example.com">info@example.com</a>
           </li>
           <li >
-            <a  class="contakts-footer" href=":tel:+380961111111">:+38 099 111 11 11</a>
+            <a class="telephone" href=":tel:+380961111111">:+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
