--- a/index.html
+++ b/index.html
@@ -154,17 +154,18 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-fot" href=""><span class="web_color">Web</span><span class="web_color-b">Studio</span></a>
-      <address>
+      <a class="logo-fot" href="./index.html"><span class="web_color">Web</span><span class="web_color-b">Studio</span></a>
+      <address class="adres-foot">
         <ul>
           <li >
             <a class="adress" href="г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="contakts"><a href="info@example.com">info@example.com</a></li>
-          <li class="contakts"><a href=":tel:+380961111111">:+38 099 111 11 11</a></li>
+          <li ><a class="mail" href="info@devstudio.com">info@devstudio.com</a></li>
+          <li ><a class="telephone" href=":tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
   </body>
 </html>
+
