--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           Эфективные решения <br />
           для вашего бизнеса
         </h1>
-         <button type="button" class="button">Заказать услугу</button>
+         <button class="button" type="button" >Заказать услугу</button>
             </section>
       <!--преимущиства-->
       <section class="section">
