--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="./CSS/nain.css" />
   </head>
   <body class="body">
-    <h1>партфолио</h1>
+    
     <!--golova-->
-    <header class="">
+        <header class="">
+          <h1>партфолио</h1>  
       <nav>
         <a class="logo" href="./index.html"
           ><span class="web_color">Web</span
@@ -40,11 +41,11 @@
       <!--навигация -->
       <section>
         <ul class="">
-          <li class="port-nav"><button type="button">Все</button></li>
-          <li class="port-nav"><button type="button">Веб-сайт</button></li>
-          <li class="port-nav"><button type="button">Приложения</button></li>
-          <li class="port-nav"><button type="button">Дизайн</button></li>
-          <li class="port-nav"><button type="button">маркетинг</button></li>
+          <li><button  type="button" class="port-nav" >Все</button></li>
+          <li><button  type="button" class="port-nav" >Веб-сайт</button></li>
+          <li><button  type="button" class="port-nav" >Приложения</button></li>
+          <li><button  type="button" class="port-nav" >Дизайн</button></li>
+          <li><button  type="button" class="port-nav" >Маркетинг</button></li>
         </ul>
         <!--секция с картинками-->
         <ul class="imagi-partfolio">
