--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,11 @@
       <!--навигация -->
       <section>
         <ul class="">
-          <li><button  type="button" class="port-nav" >Все</button></li>
-          <li><button  type="button" class="port-nav" >Веб-сайт</button></li>
-          <li><button  type="button" class="port-nav" >Приложения</button></li>
-          <li><button  type="button" class="port-nav" >Дизайн</button></li>
-          <li><button  type="button" class="port-nav" >Маркетинг</button></li>
+          <li><button class="port-nav"  type="button">Все</button></li>
+          <li><button class="port-nav"  type="button">Веб-сайт</button></li>
+          <li><button class="port-nav"  type="button">Приложения</button></li>
+          <li><button class="port-nav"  type="button">Дизайн</button></li>
+          <li><button class="port-nav"  type="button">Маркетинг</button></li>
         </ul>
         <!--секция с картинками-->
         <ul class="imagi-partfolio">
